fixed gap between the row of images and closing message

--- a/app/(pages)/about/about.module.scss
+++ b/app/(pages)/about/about.module.scss
@@ -44,7 +44,7 @@
 }
 
 .collumn {
-    width: 60%;
+    width: auto;
     
     display: flex;
     flex-direction: column;
@@ -53,7 +53,6 @@
 }
 
 .row, .pictureRow {
-    padding-bottom: 3%;
     margin: 2% 5%;
 
     display: flex;
@@ -65,10 +64,12 @@
 }
 
 .row {
+    padding-bottom: 3%;
     gap: 9%;
 }
 
 .pictureRow {
+    padding-bottom: 1%;
     gap: 4%;
 }
 
